--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ maven_group = io.github.haykam821
 mod_version = 1.0.0
 
 # Versions
-minecraft_version = 1.16.4
-yarn_mappings = 1.16.4+build.7
-loader_version = 0.10.8
-fabric_version = 0.25.1+build.416-1.16
+minecraft_version = 1.17.1
+yarn_mappings = 1.17.1+build.65
+loader_version = 0.14.23
+fabric_version = 0.46.1+1.17
